# covid_masks_data

./: .gitignore  pyproject.toml
data/: covidcast-fb-survey-smoothed_hh_cmnty_cli-2020-09-22-to-2020-10-22.csv  masks.csv
export/: cdc.csv  mask_avg.csv  symptoms_avg.csv
src/analysis/: average_by_date.py  average_cdc_data.py
